src/objects/FolioEvent__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FolioEvents</relationshipLabel>
        <relationshipName>FolioEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>FolioEvents</relationshipLabel>
        <relationshipName>FolioEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minutes_in_Event__c</fullName>
        <formula>Seconds_in_Event__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes in Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Event_Time__c</fullName>
        <label>Next Event Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Folio Events</relationshipLabel>
        <relationshipName>FolioEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seconds_in_Event__c</fullName>
        <formula>IF((Next_Event_Time__c -  eventTime__c) * 86400 &lt;  ($Setup.DPS__c.Time_Out__c * 60) ,(Next_Event_Time__c -  eventTime__c) * 86400,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seconds in Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Event__c</fullName>
        <formula>IF(
   (Next_Event_Time__c -  eventTime__c)  &gt; 0 ,
  TEXT( FLOOR( (Next_Event_Time__c -  eventTime__c) ) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD( (Next_Event_Time__c -  eventTime__c) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (Next_Event_Time__c -  eventTime__c) * 24 * 60, 60 ), 2 ) ) &amp; &quot; minutes&quot;,
  &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Salesperson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Salesperson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>articleStackTitle__c</fullName>
        <label>Slide Stack Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventName__c</fullName>
        <label>Event Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventTime__c</fullName>
        <label>Event Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>issueName__c</fullName>
        <label>Presentation Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>issuerId__c</fullName>
        <label>Issuer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stackId__c</fullName>
        <label>Slide Stack Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>FolioEvent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>eventName__c</columns>
        <columns>Opportunity__c</columns>
        <columns>eventTime__c</columns>
        <columns>stackId__c</columns>
        <columns>Seconds_in_Event__c</columns>
        <columns>Minutes_in_Event__c</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>articleStackTitle__c</columns>
        <columns>issueName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Content_Views</fullName>
        <columns>eventTime__c</columns>
        <columns>issueName__c</columns>
        <columns>articleStackTitle__c</columns>
        <columns>Account__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Seconds_in_Event__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eventName__c</field>
            <operation>equals</operation>
            <value>Content View</value>
        </filters>
        <label>Content Views</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>FolioEvent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FolioEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>